--- a/src/css/pc/pages/user.css
+++ b/src/css/pc/pages/user.css
@@ -36,14 +36,14 @@ main #user {
     border: none;
     margin-top: 30px;
   }
-  main #user #acciones fieldset button {
+  main #user  fieldset button {
     display: block;
-    font-size: 100%;
-    width: 300px;
+    width: 250px;
     margin: 10px;
   }
-  main #user #acciones .danger {
+  main #user  .danger {
     border: 4px solid red;
+    width: 250px;
   }
   main #user #solicitud {
     text-align: center;
@@ -55,4 +55,17 @@ main #user {
   main #user #solicitud textarea {
     height: 150px;
   }
-  
+  main #polizas fieldset{
+    border: none;
+
+  }
+  main #acciones form{
+    border: 1px solid black;
+    padding: 10px;
+  }
+  main #contratar {
+  text-align: center;  
+  }
+  #mis_polizas{
+margin-top:0px;
+  }
