--- a/src/css/m_pc/pages/inicio.css
+++ b/src/css/m_pc/pages/inicio.css
@@ -7,13 +7,12 @@ main #principal {
 }
 
 main #productos {
-  display: flex;
   justify-content: space-around;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 .producto {
-  margin: 20px;
-  width: 55vh;
+  margin: auto;
+  width: 70vh;
   justify-content: center;
 }
 .producto a {
@@ -24,10 +23,15 @@ main #productos {
   color: white;
   display: block;
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .producto img {
-  width: 55vh;
-  height: 200px;
+  width: 70vh;
+  margin-top: 30px;
+  height: 25vh;
+}
+#productos ul{
+font-size: 17px;  
+margin-top: 0px;
 }
