--- a/src/css/m_pc/pages/user.css
+++ b/src/css/m_pc/pages/user.css
@@ -1,7 +1,7 @@
 main #user {
-    display: flex;
     padding: 50px;
     justify-content: space-around;
+    text-align: center;
   }
   main #user #datos,
   #solicitud,
