--- a/src/css/mobile/pages/inicio.css
+++ b/src/css/mobile/pages/inicio.css
@@ -1,19 +1,18 @@
 main #principal {
   text-align: center;
-  height: 25vh;
+  height: 25vw;
   background-image: url("/images/fondo.jpg");
 
   padding-top: 50px;
 }
 
 main #productos {
-  display: flex;
   justify-content: space-around;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 .producto {
-  margin: 20px;
-  width: 55vh;
+  margin: auto;
+  width: 70vw;
   justify-content: center;
 }
 .producto a {
@@ -24,10 +23,18 @@ main #productos {
   color: white;
   display: block;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
+  width: 75vw;
 }
 
 .producto img {
-  width: 55vh;
-  height: 200px;
+  width: 70vw;
+  margin-top: 30px;
+  height: 25vw;
+}
+#productos ul{
+margin-top: 0px;
+}
+main{
+  width: 100vw;
 }
